[package]
name = "tssh-core"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
p256 = "0.13.2"
p384 = "0.13.1"
p521 = "0.13.3"
refinery = { version = "0.9.0", features = ["rusqlite"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
ssh-key = "0.6.7"
tracing = "0.1.44"
tss-esapi = {version = "8.0.0-alpha.2"}

[dev-dependencies]
rand = "0.10.1"
